# E-commerce

./: .gitignore
myproject/: db.sqlite3  ecommerce  pyproject.toml  requirements.txt
myproject/ecommers-frontend/: package-lock.json  package.json
myproject/ecommers-frontend/src/: App.css  App.js  CategoryList.js  ShopService.js
myproject/myproject/: settings.py  urls.py
myproject/shop/: models.py  serializers.py  tests.py  urls.py  views.py
myproject/shop/fixtures/: dummy_data.json
myproject/shop/migrations/: 0001_initial.py  0002_alter_category_name_alter_order_product_and_more.py  0003_alter_category_name.py
